add n_iter as parameter

--- a/Evaluation.ipynb
+++ b/Evaluation.ipynb
@@ -105,7 +105,8 @@
     "kind2 = # INPUT kind for second reference\n",
     "\n",
     "X_use = X[main + prots1 + prots2]\n",
-    "roc_auc_diff,auc1,auc2 = fns.test_bootstrap_roc_auc(X_use, y, main=main, prots1 = prots1, kind1 = kind1, prots2 = prots2, kind2 = kind2)"
+    "n_iter=2000\n",
+    "roc_auc_diff,auc1,auc2 = fns.test_bootstrap_roc_auc(X_use, y, main=main, prots1 = prots1, kind1 = kind1, prots2 = prots2, kind2 = kind2,n_iter=n_iter)"
    ]
   },
   {
@@ -118,7 +119,7 @@
     "# Test significance \n",
     "print('Mean AUC difference: ' + str(np.mean(roc_auc_diff)))\n",
     "impr = [val for val in roc_auc_diff if val > 0]\n",
-    "print('P-value AUC difference: ' + str(1 - len(impr)/2000))"
+    "print('P-value AUC difference: ' + str(1 - len(impr)/n_iter))"
    ]
   },
   {
