--- a/Evaluation.ipynb
+++ b/Evaluation.ipynb
@@ -195,6 +195,39 @@
    "source": [
     "print('Partial correlation: ' + str(p_corr))"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "c9cc5687",
+   "metadata": {},
+   "source": [
+    "### ANCOVA test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d772f481",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "protein_name = #INPUT name of protein\n",
+    "group_name = #INPUT column name specifying AT(N) group\n",
+    "covars = #INPUT list of covariates\n",
+    "\n",
+    "res = pg.ancova(data=df, dv = protein_name, covar=covars,between=group_name)['p-unc'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f56d7a48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('pval: ' + str(res))"
+   ]
   }
  ],
  "metadata": {
