Add simulated data and examples of how to use it

--- a/Evaluation.ipynb
+++ b/Evaluation.ipynb
@@ -21,13 +21,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load all protein data\n",
+    "# OPTION 1, import your own data: Load all protein data\n",
     "\n",
     "df = #INPUT dataframe \n",
     "X,y =  # INPUT division into X and y of DataFrame depending on association to test. \n",
     "main = #INPUT list of main predictor and confounders\n",
     "\n",
-    "print('Uploaded data contains ' + str(len(df_all)) + ' subjects and the robustness analysis is to be done on ' + str(len(candidates)) + ' proteins.')"
+    "print('Uploaded data contains ' + str(len(df)) + ' subjects.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e8cc651-b895-4422-83e0-fdb9e247ab81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# OPTION 2, use the simulated data\n",
+    "\n",
+    "df_all = pd.read_csv('simulated_data.csv',sep=';')\n",
+    "all_prots = ['protein1','protein2','protein3','protein4','protein5']\n",
+    "\n",
+    "# Make simulated cohort larger\n",
+    "df_all[[col for col in df_all if col != 'sex']] = df_all[[col for col in df_all if col != 'sex']] + np.random.randn(np.shape(df_all)[0],np.shape(df_all)[1]-1)\n",
+    "for i in range(4):\n",
+    "    new_df = df_all[[col for col in df_all if col != 'sex']] + np.random.randn(np.shape(df_all)[0],np.shape(df_all)[1]-1)\n",
+    "    new_df['sex'] = df_all['sex']\n",
+    "    df_all = pd.concat([df_all,new_df])\n",
+    "df_all = df_all.reset_index(drop=True)\n",
+    "\n",
+    "print('Uploaded data contains ' + str(len(df_all)) + ' subjects and ' + str(len(all_prots)) + ' proteins.')\n",
+    "\n",
+    "main = ['protein1','age'] # INPUT of form [main predictor, confounders]\n",
+    "X = df_all[all_prots[1:] + main] # define X to predict y\n",
+    "y = df_all['sex'] # Example: predict sex"
    ]
   },
   {
@@ -42,13 +69,15 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "063c03a1-6b65-47d9-99f9-417a6356943a",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Perform bootstrapping of the roc auc scores with or without references, as single reference, or svd/mean of several.\n",
     "\n",
     "kind = 0 # 0 for test with a single reference, 1 for test with svd of several references and 2 for test with mean level of several references\n",
-    "prots = [] # INPUT list of protein(s) to use as reference\n",
+    "prots = all_prots[1:] # INPUT list of protein(s) to use as reference\n",
     "\n",
     "X_ref = X[main + prots]\n",
     "auc = fns.bootstrap_roc_auc(X_ref,y,kind=kind,prots=prots)\n",
@@ -97,12 +126,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prots1 = #INPUT list of first reference\n",
-    "prots2 = #INPUT list of second reference\n",
+    "prots1 = ['protein2']#INPUT list of first reference\n",
+    "prots2 = ['protein3','protein4']#INPUT list of second reference\n",
     "\n",
     "# 0 for test with a single reference, 1 for test with svd of several references and 2 for test with mean level of several references\n",
-    "kind1 = # INPUT kind for first reference\n",
-    "kind2 = # INPUT kind for second reference\n",
+    "kind1 = 0# INPUT kind for first reference\n",
+    "kind2 = 1# INPUT kind for second reference\n",
     "\n",
     "X_use = X[main + prots1 + prots2]\n",
     "n_iter=2000\n",
@@ -137,11 +166,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "main_pred = # INPUT name of main predictor\n",
-    "outcome = #INPUT name of outcome variable\n",
-    "confounders = #INPUT list of confounders\n",
+    "main_pred = 'protein1'# INPUT name of main predictor\n",
+    "outcome = 'age'#INPUT name of outcome variable\n",
+    "confounders = ['sex','protein2']#INPUT list of confounders\n",
     "\n",
-    "betas, pvals = fns.get_linreg(df, main_pred=main_pred,outcome=outcome,confounder=confounders)"
+    "betas, pvals = fns.get_linreg(df_all, main_pred=main_pred,outcome=outcome,confounders=confounders)"
    ]
   },
   {
@@ -179,11 +208,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = # INPUT name of main predictor\n",
-    "y = #INPUT name of outcome variable\n",
-    "covars = #INPUT list of covariates\n",
+    "x = 'protein1'# INPUT name of main predictor\n",
+    "y = 'age'#INPUT name of outcome variable\n",
+    "covars = ['sex','protein2']#INPUT list of covariates\n",
     "\n",
-    "p_corr = pg.partial_corr(data=df, x=x, y=y, covar=covars).r['pearson']"
+    "p_corr = pg.partial_corr(data=df_all, x=x, y=y, covar=covars).r['pearson']"
    ]
   },
   {
@@ -197,7 +226,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c9cc5687",
    "metadata": {},
@@ -212,11 +240,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "protein_name = #INPUT name of protein\n",
-    "group_name = #INPUT column name specifying AT(N) group\n",
-    "covars = #INPUT list of covariates\n",
+    "protein_name = 'protein1'#INPUT name of protein\n",
+    "group_name = 'sex'#INPUT column name specifying a group (sex as example here, in manuscript AT(N) group)\n",
+    "covars = ['age','protein2']#INPUT list of covariates\n",
     "\n",
-    "res = pg.ancova(data=df, dv = protein_name, covar=covars,between=group_name)['p-unc'][0]"
+    "res = pg.ancova(data=df_all, dv = protein_name, covar=covars,between=group_name)['p-unc'][0]"
    ]
   },
   {
