--- a/TSNE-clustering.ipynb
+++ b/TSNE-clustering.ipynb
@@ -21,14 +21,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b322845-7cb0-441a-9c9d-20016fb252f9",
+   "id": "e301d2ec-4613-419b-9004-f3e0308ea0da",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load all protein data\n",
+    "# OPTION 1, import your own data: Load all protein data\n",
     "\n",
     "df_all = # INPUT File that contains all data of form (# subjects, # proteins + other variables)\n",
     "all_prots = # INPUT list of names of all proteins to perform t-SNE on \n",
+    "\n",
+    "print('Uploaded data contains ' + str(len(df_all)) + ' subjects and ' + str(len(all_prots)) + ' proteins.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8bab5a3e-56b2-474f-840a-0ef2c61105b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# OPTION 2, use the simulated data\n",
+    "\n",
+    " pd.read_csv('simulated_data.csv',sep=';')\n",
+    "all_prots = ['protein1','protein2','protein3','protein4','protein5']\n",
+    "\n",
+    "# Make simulated cohort larger\n",
+    "df_all[[col for col in df_all if col != 'sex']] = df_all[[col for col in df_all if col != 'sex']] + np.random.randn(np.shape(df_all)[0],np.shape(df_all)[1]-1)\n",
+    "for i in range(4):\n",
+    "    new_df = df_all[[col for col in df_all if col != 'sex']] + np.random.randn(np.shape(df_all)[0],np.shape(df_all)[1]-1)\n",
+    "    new_df['sex'] = df_all['sex']\n",
+    "    df_all = pd.concat([df_all,new_df])\n",
     "\n",
     "print('Uploaded data contains ' + str(len(df_all)) + ' subjects and ' + str(len(all_prots)) + ' proteins.')"
    ]
@@ -45,7 +67,12 @@
     "df_prot = df_all[all_prots].dropna().reset_index(drop=True)\n",
     "df_prot_n = StandardScaler().fit_transform(df_prot)\n",
     "\n",
-    "tsne = TSNE(n_components=2,init='pca',random_state=1) #set random state for reproducability\n",
+    "if len(all_prots) < 30:\n",
+    "    perplexity = len(all_prots)-1\n",
+    "else:\n",
+    "    perplexity = 30 #(Default, can be changed)\n",
+    "    \n",
+    "tsne = TSNE(n_components=2,init='pca',random_state=1,perplexity=perplexity) #set random state for reproducability\n",
     "comps = tsne.fit_transform(df_prot_n.T)\n",
     "tsne_df = pd.DataFrame(data = comps, columns = ['comp1', 'comp2'])\n",
     "print('t-SNE done.')"
@@ -103,12 +130,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e2ed322e-1535-48f3-bb0f-87b9aa801056",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Perform K-means clustering \n",
     "\n",
-    "n_clusters= 20\n",
+    "n_clusters= 2# set prefered number, 20 was used in the manuscript\n",
     "kmeans = KMeans(n_clusters=n_clusters, random_state=1)  #set random state for reproducability\n",
     "clusters = kmeans.fit(tsne_df)\n",
     "cluster_labels = clusters.labels_\n",
@@ -145,8 +174,9 @@
    "source": [
     "# Select baseline variables and X,y for cross validation of association 1\n",
     "\n",
-    "baseline_vars = ['age','gender_baseline_variable'] # INPUT of form [main predictor, confounders]\n",
-    "#X,y = # INPUT division into X and y of DataFrame depending on model. \n",
+    "baseline_vars = ['protein1','age'] # INPUT of form [main predictor, confounders]\n",
+    "X = df_all[all_prots[1:] + baseline_vars]\n",
+    "y = df_all['sex']# INPUT division into X and y of DataFrame depending on model. \n",
     "\n",
     "\n",
     "# Baseline comparison without reference\n",
@@ -180,7 +210,7 @@
     "\n",
     "plt.title('Association 1')\n",
     "plt.xlabel('Cluster Number')\n",
-    "plt.xticks(np.arange(0,20,1))\n",
+    "plt.xticks(np.arange(0,n_clusters,1))\n",
     "plt.ylabel('AUC')\n",
     "plt.legend()"
    ]
