extend simulated dataset

--- a/TSNE-clustering.ipynb
+++ b/TSNE-clustering.ipynb
@@ -42,13 +42,13 @@
    "source": [
     "# OPTION 2, use the simulated data\n",
     "\n",
-    " pd.read_csv('simulated_data.csv',sep=';')\n",
-    "all_prots = ['protein1','protein2','protein3','protein4','protein5']\n",
+    "df_all = pd.read_csv('simulated_data.csv',sep=';')\n",
+    "all_prots = [col for col in df_all if 'protein' in col]\n",
     "\n",
     "# Make simulated cohort larger\n",
     "df_all[[col for col in df_all if col != 'sex']] = df_all[[col for col in df_all if col != 'sex']] + np.random.randn(np.shape(df_all)[0],np.shape(df_all)[1]-1)\n",
     "for i in range(4):\n",
-    "    new_df = df_all[[col for col in df_all if col != 'sex']] + np.random.randn(np.shape(df_all)[0],np.shape(df_all)[1]-1)\n",
+    "    new_df = df_all[[col for col in df_all if col != 'sex']] + 0.01*np.random.randn(np.shape(df_all)[0],np.shape(df_all)[1]-1)\n",
     "    new_df['sex'] = df_all['sex']\n",
     "    df_all = pd.concat([df_all,new_df])\n",
     "\n",
@@ -68,7 +68,7 @@
     "df_prot_n = StandardScaler().fit_transform(df_prot)\n",
     "\n",
     "if len(all_prots) < 30:\n",
-    "    perplexity = len(all_prots)-1\n",
+    "    perplexity = len(all_prots)-len(all_prots)/2\n",
     "else:\n",
     "    perplexity = 30 #(Default, can be changed)\n",
     "    \n",
@@ -88,9 +88,9 @@
     "# Plot t-SNE results (Figure X)\n",
     "\n",
     "basecol = 'skyblue'\n",
-    "plt.rcParams[\"figure.figsize\"] = (10,6)\n",
+    "plt.rcParams[\"figure.figsize\"] = (8,5)\n",
     "plt.rc('font', size=14)\n",
-    "plt.scatter(tsne_df['comp1'],tsne_df['comp2'],color=basecol,s=20)\n",
+    "plt.scatter(tsne_df['comp1'],tsne_df['comp2'],color=basecol,s=40)\n",
     "plt.title('t-SNE')\n",
     "plt.xticks([])\n",
     "plt.yticks([])"
@@ -120,7 +120,7 @@
     "cscaled = np.sort(cols_scaled,axis=0)\n",
     "\n",
     "#Plot\n",
-    "plt.scatter(tsne_df['comp1'].loc[idxs],tsne_df['comp2'].loc[idxs],color=cmap(cscaled),s=20)\n",
+    "plt.scatter(tsne_df['comp1'].loc[idxs],tsne_df['comp2'].loc[idxs],color=cmap(cscaled),s=40)\n",
     "plt.title('t-SNE')\n",
     "plt.xticks([])\n",
     "plt.yticks([])"
@@ -137,7 +137,7 @@
    "source": [
     "# Perform K-means clustering \n",
     "\n",
-    "n_clusters= 2# set prefered number, 20 was used in the manuscript\n",
+    "n_clusters= 3# set prefered number, 20 was used in the manuscript\n",
     "kmeans = KMeans(n_clusters=n_clusters, random_state=1)  #set random state for reproducability\n",
     "clusters = kmeans.fit(tsne_df)\n",
     "cluster_labels = clusters.labels_\n",
@@ -154,12 +154,12 @@
    "source": [
     "# Plot K-means results in t-SNE plot (Figure X)\n",
     "\n",
-    "plt.rcParams[\"figure.figsize\"] = (10,6)\n",
+    "plt.rcParams[\"figure.figsize\"] = (8,5)\n",
     "colors = cm.tab20(np.linspace(0, 1, n_clusters))\n",
     "for i,col in zip(range(n_clusters),colors):\n",
     "    clust_idx = cluster_labels == i\n",
-    "    plt.scatter(tsne_df['comp1'][clust_idx],tsne_df['comp2'][clust_idx],label='Cluster ' + str(i),color=col,s=20)\n",
-    "#plt.legend()  #Uncomment to check cluster number color\n",
+    "    plt.scatter(tsne_df['comp1'][clust_idx],tsne_df['comp2'][clust_idx],label='Cluster ' + str(i),color=col,s=40)\n",
+    "plt.legend()  #Uncomment to check cluster number color\n",
     "plt.title('t-SNE')\n",
     "plt.xticks([])\n",
     "plt.yticks([])"
@@ -203,10 +203,10 @@
     "# Plot cluster wise AUC results for association \n",
     "\n",
     "plt.rcParams[\"figure.figsize\"] = (12,6)\n",
-    "plt.axhline(baseline_AUC,color='black',linestyle='dashed',label='Baseline')\n",
+    "plt.axhline(baseline_AUC,color='black',linestyle='dashed',label='No reference')\n",
     "for clust_AUC,col,i in zip(best_AUCs,colors,range(n_clusters)):\n",
     "    plt.errorbar(i,np.mean(clust_AUC),np.std(clust_AUC),fmt = 'o',color = 'black',\n",
-    "                ecolor = col, elinewidth = 5, capsize=10)\n",
+    "                ecolor = col, elinewidth = 5, capsize=10,label='cluster ' + str(i))\n",
     "\n",
     "plt.title('Association 1')\n",
     "plt.xlabel('Cluster Number')\n",
